--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
                   <input
                     placeholder="enter here"
                     name="birthday"
-                    type="text"
+                    type="date"
                     class="white-text"
                   />
                 </div>
