--- a/public/index.html
+++ b/public/index.html
@@ -67,5 +67,5 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
   <!-- own  -->
-  <script src="app.js"></script>
+  <script src="./app.js"></script>
 </html>
